<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:layout_weight="1"
    android:background="@color/background_all"
    android:scrollbars="none"
    tools:context=".home">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <TableRow style="@style/row">

            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp"


                >

                    <TextView
                        android:id="@+id/garage"
                        android:drawableTop="@drawable/garage"
                        style="@style/textCard"
                        android:text="@string/garage"
                        android:drawablePadding="10dp"/>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">



                    <TextView
                        android:drawableTop="@drawable/door"
                        style="@style/textCard"
                        android:text="@string/open_home" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">


                    <TextView
                        android:drawableTop="@drawable/bed_room"
                        style="@style/textCard"
                        android:text="@string/bed_room" />
            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow style="@style/row">

            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">


                    <TextView
                        android:drawableTop="@drawable/children_room"
                        style="@style/textCard"
                        android:text="@string/children_room" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">


                    <TextView
                        android:drawableTop="@drawable/kitchen"
                        style="@style/textCard"
                        android:drawablePadding="10dp"
                        android:text="@string/kitchen" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"

                app:contentPadding="5dp">


                    <TextView
                        style="@style/textCard"
                        android:drawableTop="@drawable/bathroom_room"
                        android:text="@string/bath_room" />

            </android.support.v7.widget.CardView>

        </TableRow>

        <TableRow style="@style/row">

            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">


                    <TextView
                        android:drawableTop="@drawable/web_camera"
                        style="@style/textCard"
                        android:drawablePadding="10dp"
                        android:text="@string/camera" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">


                    <TextView
                        android:drawableTop="@drawable/alarm"
                        style="@style/textCard"
                        android:drawablePadding="10dp"
                        android:text="@string/morning" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView

                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">



                    <TextView
                        android:drawableTop="@drawable/page_setup"
                        style="@style/textCard"
                        android:drawablePadding="10dp"
                        android:text="@string/setting" />

            </android.support.v7.widget.CardView>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView

                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">


                    <TextView
                        android:drawableTop="@drawable/contact"
                        style="@style/textCard"
                        android:onClick="dialogContact"
                        android:text="@string/contact" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">

                    <TextView

                        android:drawableTop="@drawable/about_us"
                        style="@style/textCard"
                        android:text="@string/about"
                        android:onClick="dialogAbout"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                style="@style/cardView"
                app:cardCornerRadius="4dp"
                app:contentPadding="5dp">

                <TextView
                    android:id="@+id/logout"
                    android:drawableTop="@drawable/log_out"
                    style="@style/textCard"
                    android:text="@string/logout"
                   />

            </android.support.v7.widget.CardView>
        </TableRow>

    </TableLayout>

</ScrollView>