<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="240dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:drawableLeft="@drawable/person"
                    android:drawablePadding="4dp"
                    android:maxLines="1"
                    android:textColor="@color/card_back"
                    android:textColorHint="@color/card_back"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColor="@color/card_back"
                    android:textColorHint="@color/card_back"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:drawablePadding="4dp"
                    android:imeOptions="actionUnspecified"
                    android:drawableLeft="@drawable/lock"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login_button"
                android:text="Log in"
                android:textAllCaps="false"
                android:textStyle="normal"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="@color/card_back"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:fontFamily="@font/play_fair"
                android:clickable="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp" />



        </LinearLayout>
    </ScrollView>
</LinearLayout>